--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@
 }
 .body{
 	background-color:#AEDDE9;
+	text-align: center;
 }
 .h1 {
 	text-align:center;
@@ -20,3 +21,22 @@ iframe{
 	margin-bottom:2.5%;
 	margin-top:2.5%;
 }
+#submitButton{
+	background-color: #CC7B7D;
+    border: 1px solid #777;
+    border-radius: 2px;
+    font-family: inherit;
+    font-size: 21px;
+    display: block;
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+ form {
+            background-color: #fff;
+            max-width: 500px;
+            margin: 50px auto;
+            padding: 30px 20px;
+            box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
+        }
+ 
