--- a/quotes.css
+++ b/quotes.css
@@ -1,19 +1,27 @@
 .title{
     font-size: 50px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:peru;
+    color:indianred;
     text-align: center;
 }
 body{
-    background-color: blanchedalmond;
+    background-color:aliceblue;
 }
 
 .description{
     font-weight: normal;
     text-align: center;
     width: 80%;
+    color: rosybrown;
     margin-left: 10%;
 
+}
+
+.gif{
+    margin: 0 auto;
+    display: block;
+    size: 50%;
+    padding-top: 20px;
 }
 
 .container{ 
@@ -26,9 +34,9 @@ body{
     padding-top: 20px;
     text-align: center;
     padding-bottom:20px;
-    color:sienna;
-    text-shadow: 10px;
-    font-size: large;
+    color:black;
+    text-shadow: 20px;
+    font-size: x-large;
 }
 
 #quoteBtn{
@@ -40,5 +48,5 @@ button {
     display: block;
     font-size: 20px;
     border-color: transparent;
-    background-color: coral;
+    background-color:rosybrown;
 }
