--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,13 +10,14 @@
 h1 {
     vertical-align: center;
     color: #CC7B7D;
-	margin-left:35%;
+	margin-left:38%;
 }
 p {
-    text-align:center;
-	vertical-align: center;
-	width:50%;
-	align-self: center;
+    text-align: center;
+    vertical-align: center;
+    width: 50%;
+    align-self: center;
+    margin-left: 25%;
 	
 }
 iframe{
@@ -43,5 +44,6 @@ iframe{
             box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
         }
 #trees{
+    width: auto;
+    margin-left: 35%;
 }
-
