--- a/activstyle.css
+++ b/activstyle.css
@@ -3,9 +3,11 @@ body {
   }
   
 h1 {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: black;
-    text-align: center;
+    margin-left: 0px;
     font-size: 25px;
+    text-align: center;
   }
 
  h2 {
