--- a/Emoji.css
+++ b/Emoji.css
@@ -3,92 +3,18 @@
 /*************************************************************************/
 
  
-  /*{
-    margin: 100px;
-    padding: 0px;
-    box-sizing: border-box;
-  }*/
-  
   body {
     /*background: #fbdb36;*/
-    background-color:#ffe9ec;
+    background-color: aliceblue;
     color: black;
     font-family: "Holtwood One SC", serif;
-    background-image: url("Self\ Care.jpeg");
   }
-  
-  h1 {
-    font-size: 2em;
-    background-color:#FFFFFF;
-  }
-  
-  h2 {
-    font-size: 1.5em;
-    display: inline;
-  }
-  
-  
   
 
-  
-  textarea {
-    resize: none;
-  }
-  
-  /*************************************************************************/
-  /**************************MAIN TITLES STYLES*****************************/
-  /*************************************************************************/
-  
-  #titles {
-    width: 100%;
+    font-size: 50px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:indianred;
     text-align: center;
-    background: #1f1e24;
-    color: white;
-    padding: 20px;
-  }
-  
-  /*************************************************************************/
-  /**************************MAIN REQUIRED FORM STYLES**********************/
-  /*************************************************************************/
-  
-  #main-form {
-    display: flex;
-    width: 70%;
-    background: rgb(244, 226, 198);
-    color: black;
-    margin: 20px auto;
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  #main-form div {
-    margin-bottom: 15px;
-  }
-  
-  #main-form label {
-    display: block;
-  }
-  
-  #main-form form {
-    flex-grow: 1;
-  }
-  
-  #main-form #name,
-  #main-form #email,
-  #main-form #number {
-    width: 100%;
-    height: 35px;
-    border-radius: 2px;
-    padding: 15px;
-    border: 1px solid rgb(214, 214, 214);
-    color: gray;
-  }
-  
- 
-  
-  /*************************************************************************/
-  /**************************RESPONSIVE FORM STYLES*************************/
-  /*************************************************************************/
   
   @media screen and (max-width: 700px) {
     #main-form {
@@ -101,4 +27,13 @@
 
     
   }
+
+  #survey{
+    background-color: #fff;
+            max-width: 500px;
+            margin: 50px auto;
+            padding: 30px 20px;
+            box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
+  }
+  
   
