--- a/bootstrap-4.4.1.css
+++ b/bootstrap-4.4.1.css
@@ -61,7 +61,7 @@ body {
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #CFE1EF;
+    background-color: #F0F8FF;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
